NetworkAccessViewer::requestFinished(): prevent crash

Let's hope it won't crash somewhere else..

BUGFIXES:
 * Fix crash in Network Requests Viewer.

BUG: 311760
FIXED-IN: 2.7